--- a/shop-single.html
+++ b/shop-single.html
@@ -519,8 +519,8 @@
 
                     </div>
                     <div class="cpy-right text-left row">
-                        <p class="col-md-10">© 2019 Bootie. All rights reserved | Design by
-                            <a href="http://w3layouts.com"> W3layouts.</a>
+                        <p class="col-md-10">© 2019 Bootie. All rights reserved 
+                            
                         </p>
                         <!-- move top icon -->
                         <a href="#home" class="move-top text-right col-md-2"><span class="fa fa-long-arrow-up" aria-hidden="true"></span></a>
